--- a/pagination.html
+++ b/pagination.html
@@ -1,29 +1,64 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Link Shopee Pagination</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    textarea { width: 100%; height: 150px; }
-    #output { white-space: pre-wrap; background: #f4f4f4; padding: 10px; border: 1px solid #ccc; }
-    .pagination { margin-top: 10px; }
-    .page-btn { margin: 0 2px; padding: 5px 10px; cursor: pointer; }
-    .active { font-weight: bold; }
-    #copyBtn { margin-top: 10px; }
-    #stats { margin: 15px 0; font-weight: bold; }
+    body { font-family: Arial, sans-serif; margin: 20px; max-width: 600px; margin-left: auto; margin-right: auto; }
+    #sponsor {
+      background-color: #fffae6;
+      border: 1px solid #ffd42a;
+      padding: 10px;
+      margin-bottom: 20px;
+      font-weight: bold;
+      text-align: center;
+      color: #b36b00;
+      border-radius: 5px;
+      box-shadow: 0 0 5px rgba(255, 212, 42, 0.5);
+      font-size: 1.1rem;
+    }
+    textarea { width: 100%; height: 150px; box-sizing: border-box; font-size: 1rem; padding: 8px; }
+    #output { 
+      white-space: pre-wrap; 
+      background: #f4f4f4; 
+      padding: 10px; 
+      border: 1px solid #ccc; 
+      min-height: 150px;
+      font-size: 0.9rem;
+      overflow-wrap: break-word;
+    }
+    .pagination { margin-top: 10px; text-align: center; }
+    .page-btn { margin: 0 2px; padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; border-radius: 3px; background-color: white; }
+    .page-btn:hover { background-color: #ffd42a; color: #b36b00; }
+    .active { font-weight: bold; background-color: #ffd42a; color: #b36b00; border-color: #b36b00; }
+    #copyBtn { margin-top: 10px; padding: 8px 16px; font-size: 1rem; cursor: pointer; border: none; background-color: #ffd42a; color: #b36b00; border-radius: 4px; }
+    #copyBtn:hover { background-color: #e6c72b; }
+    #stats { margin: 15px 0; font-weight: bold; font-size: 1rem; }
+    @media (max-width: 480px) {
+      body { margin: 10px; }
+      textarea { height: 120px; font-size: 0.9rem; }
+      #output { font-size: 0.85rem; }
+      #copyBtn { width: 100%; }
+      .page-btn { padding: 5px 6px; font-size: 0.85rem; }
+    }
   </style>
 </head>
 <body>
 
+  
+
   <h2>Masukkan Link Shopee</h2>
   <textarea id="inputLinks" placeholder="Masukkan ribuan link Shopee, satu per baris..."></textarea>
+  <div class="sponsor">
+  <br>
+        <center>Disponsori oleh <strong>Kios Tembakau MadGazan</strong></center>
+  </div>
 
   <h3>Masukkan ID Toko yang Dikecualikan (satu per baris)</h3>
   <textarea id="excludedShops" placeholder="Contoh: 123456789&#10;987654321"></textarea>
 
-  <br>
-  <button onclick="processLinks()">Proses Link</button>
+  <br />
+  <button onclick="processLinks()" id="processBtn">Proses Link</button>
 
   <div id="stats"></div>
 
@@ -45,20 +80,18 @@
       const rawLinks = input.split('\n').map(link => link.trim()).filter(link => link);
       const uniqueLinks = [...new Set(rawLinks)];
 
-      // Ambil daftar shop_id yang ingin dikecualikan
       const excludedShopIds = excludeInput
         .split('\n')
         .map(id => id.trim())
         .filter(id => id !== '');
 
-      // Filter link yang bukan dari toko yang dikecualikan
       const filteredLinks = uniqueLinks.filter(link => {
         const match = link.match(/\/product\/(\d+)\/\d+/);
         if (match) {
           const shopId = match[1];
           return !excludedShopIds.includes(shopId);
         }
-        return false; // Jika tidak cocok dengan pola, buang juga
+        return false;
       });
 
       allLinks = filteredLinks;
