--- a/elimination.html
+++ b/elimination.html
@@ -132,7 +132,7 @@
         `Total link diinput: ${rawLinks.length}\n` +
         `Link unik: ${uniqueLinks.length}\n` +
         `Link valid (sesuai pola): ${validLinks.length}\n` +
-        `Link tereliminasi (excluded toko): ${validLinks.length - filteredLinks.length}\n` +
+        `Link tereliminasi (produk toko live): ${validLinks.length - filteredLinks.length}\n` +
         `Link setelah eliminasi: ${filteredLinks.length}\n` +
         `Total halaman: ${totalPages}`;
 
