--- a/elimination.html
+++ b/elimination.html
@@ -18,10 +18,7 @@
       font-size: 1.1rem;
     }
     textarea { width: 100%; height: 150px; box-sizing: border-box; font-size: 1rem; padding: 8px; }
-    /* Sembunyikan output tapi tetap ada di DOM */
-    #output { 
-      display: none;
-    }
+    #output { display: none; }
     .pagination { margin-top: 10px; text-align: center; }
     .page-btn { margin: 0 2px; padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; border-radius: 3px; background-color: white; }
     .page-btn:hover { background-color: #ffd42a; color: #b36b00; }
@@ -43,7 +40,7 @@
   <h2>Masukkan Link Shopee</h2>
   <textarea id="inputLinks" placeholder="Masukkan ribuan link Shopee, satu per baris..."></textarea>
   <button id="clearInputLinksBtn" style="margin-top:5px; padding:5px 10px; cursor:pointer;">Clear Input Links</button>
-  
+
   <div class="sponsor">
     <br>
     <center>Disponsori oleh <strong>Kios Tembakau MadGazan</strong></center>
@@ -70,10 +67,10 @@
 
     // Load data dari localStorage saat halaman dibuka
     window.onload = () => {
-      if(localStorage.getItem('inputLinks')) {
+      if (localStorage.getItem('inputLinks')) {
         inputLinksEl.value = localStorage.getItem('inputLinks');
       }
-      if(localStorage.getItem('excludedShops')) {
+      if (localStorage.getItem('excludedShops')) {
         excludedShopsEl.value = localStorage.getItem('excludedShops');
       }
       processLinks();
@@ -108,10 +105,14 @@
         .map(id => id.trim())
         .filter(id => id !== '');
 
-      // Link yang valid (pola cocok)
+      // ✅ Tambahan: cek duplikat ID toko
+      const duplicateShopIds = excludedShopIds.filter((id, idx, arr) => arr.indexOf(id) !== idx);
+      if (duplicateShopIds.length > 0) {
+        alert(`Peringatan: Ditemukan ID toko yang duplikat:\n${[...new Set(duplicateShopIds)].join('\n')}`);
+      }
+
       const validLinks = uniqueLinks.filter(link => /\/product\/\d+\/\d+/.test(link));
 
-      // Filter setelah kecualikan berdasarkan toko
       const filteredLinks = validLinks.filter(link => {
         const match = link.match(/\/product\/(\d+)\/\d+/);
         if (match) {
@@ -128,7 +129,7 @@
 
       const totalPages = Math.ceil(allLinks.length / maxPerPage);
 
-      const statsText = 
+      const statsText =
         `Total link diinput: ${rawLinks.length}\n` +
         `Link unik: ${uniqueLinks.length}\n` +
         `Link valid (sesuai pola): ${validLinks.length}\n` +
