--- a/dummy-elimination.html
+++ b/dummy-elimination.html
@@ -2,38 +2,121 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Link Shopee Pagination</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; max-width: 600px; margin-left: auto; margin-right: auto; }
-    #sponsor {
+    body {
+      font-family: Arial, sans-serif;
+      margin: 15px;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    h2, h3 {
+      font-size: 1.2rem;
+      margin-bottom: 8px;
+    }
+    textarea {
+      width: 100%;
+      height: 150px;
+      box-sizing: border-box;
+      font-size: 1rem;
+      padding: 8px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    #output {
+      display: none;
+      margin-top: 10px;
+    }
+    #output a {
+      display: block;
+      margin-bottom: 6px;
+      color: #0066cc;
+      text-decoration: none;
+      word-wrap: break-word;
+    }
+    #output a:hover { text-decoration: underline; }
+    .pagination {
+      margin-top: 15px;
+      text-align: center;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 6px;
+      justify-content: center;
+    }
+    .page-btn {
+      padding: 10px 14px;
+      cursor: pointer;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      background-color: white;
+      font-size: 1rem;
+      min-width: 40px;
+    }
+    .page-btn:hover { background-color: #ffd42a; color: #b36b00; }
+    .active {
+      font-weight: bold;
+      background-color: #ffd42a;
+      color: #b36b00;
+      border-color: #b36b00;
+    }
+    #copyBtn {
+      margin-top: 12px;
+      padding: 12px;
+      font-size: 1rem;
+      cursor: pointer;
+      border: none;
+      background-color: #ffd42a;
+      color: #b36b00;
+      border-radius: 6px;
+      width: 100%;
+    }
+    #copyBtn:hover { background-color: #e6c72b; }
+    .input-buttons {
+      display: flex;
+      gap: 8px;
+      margin-top: 6px;
+    }
+    .input-buttons button {
+      flex: 1;
+      padding: 10px;
+      font-size: 0.95rem;
+      cursor: pointer;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      background: #f5f5f5;
+    }
+    .input-buttons button:hover {
+      background: #eee;
+    }
+    #stats {
+      margin: 15px 0;
+      font-weight: bold;
+      font-size: 1rem;
+      white-space: pre-line;
+    }
+    .sponsor {
       background-color: #fffae6;
       border: 1px solid #ffd42a;
-      padding: 10px;
-      margin-bottom: 20px;
+      padding: 12px;
+      margin: 15px 0;
       font-weight: bold;
       text-align: center;
       color: #b36b00;
-      border-radius: 5px;
+      border-radius: 6px;
       box-shadow: 0 0 5px rgba(255, 212, 42, 0.5);
-      font-size: 1.1rem;
+      font-size: 1rem;
     }
-    textarea { width: 100%; height: 150px; box-sizing: border-box; font-size: 1rem; padding: 8px; }
-    #output { display: none; margin-top: 10px; }
-    #output a { display: block; margin-bottom: 5px; color: #0066cc; text-decoration: none; }
-    #output a:hover { text-decoration: underline; }
-    .pagination { margin-top: 10px; text-align: center; }
-    .page-btn { margin: 0 2px; padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; border-radius: 3px; background-color: white; }
-    .page-btn:hover { background-color: #ffd42a; color: #b36b00; }
-    .active { font-weight: bold; background-color: #ffd42a; color: #b36b00; border-color: #b36b00; }
-    #copyBtn { margin-top: 10px; padding: 8px 16px; font-size: 1rem; cursor: pointer; border: none; background-color: #ffd42a; color: #b36b00; border-radius: 4px; }
-    #copyBtn:hover { background-color: #e6c72b; }
-    #stats { margin: 15px 0; font-weight: bold; font-size: 1rem; white-space: pre-line; }
+    /* Responsive tweaks */
     @media (max-width: 480px) {
-      body { margin: 10px; }
+      h2, h3 { font-size: 1rem; }
       textarea { height: 120px; font-size: 0.9rem; }
       #output { font-size: 0.85rem; }
-      #copyBtn { width: 100%; }
-      .page-btn { padding: 5px 6px; font-size: 0.85rem; }
+      .page-btn { padding: 8px 12px; font-size: 0.9rem; }
+      #copyBtn { font-size: 0.95rem; }
+      .input-buttons { flex-direction: column; }
+      .input-buttons button { flex: unset; width: 100%; }
     }
   </style>
 </head>
@@ -41,11 +124,13 @@
 
   <h2>Masukkan Link Shopee</h2>
   <textarea id="inputLinks" placeholder="Masukkan ribuan link Shopee, satu per baris..."></textarea>
-  <button id="clearInputLinksBtn" style="margin-top:5px; padding:5px 10px; cursor:pointer;">Clear Input Links</button>
+  <div class="input-buttons">
+    <button id="clearInputLinksBtn">Clear Input Links</button>
+    <button id="copyInputLinksBtn">Copy Input Links</button>
+  </div>
 
   <div class="sponsor">
-    <br>
-    <center>Disponsori oleh <strong>Kios Tembakau MadGazan</strong></center>
+    Disponsori oleh <strong>Kios Tembakau MadGazan</strong>
   </div>
 
   <h3>Masukkan ID Toko yang Dikecualikan (satu per baris)</h3>
@@ -91,6 +176,17 @@
       inputLinksEl.value = '';
       localStorage.removeItem(`${pageKey}_inputLinks`);
       processLinks();
+    });
+
+    document.getElementById('copyInputLinksBtn').addEventListener('click', () => {
+      const textToCopy = inputLinksEl.value.trim();
+      if (!textToCopy) {
+        alert("Input kosong, tidak ada yang disalin!");
+        return;
+      }
+      navigator.clipboard.writeText(textToCopy)
+        .then(() => alert("Isi input berhasil disalin!"))
+        .catch(() => alert("Gagal menyalin!"));
     });
 
     function processLinks() {
