--- a/ambildata.html
+++ b/ambildata.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Baca CSV Kolom P & Data TXT</title>
+  <title>Ambil Data dari data.txt</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; max-width: 700px; }
     textarea { width: 100%; height: 200px; margin-top: 10px; }
@@ -10,12 +10,7 @@
   </style>
 </head>
 <body>
-  <h2>Upload Multi CSV atau Ambil dari data.txt</h2>
-
-  <div>
-    <input type="file" id="csvFile" accept=".csv" multiple>
-    <button onclick="processCSV()">Upload & Proses CSV</button>
-  </div>
+  <h2>Ambil Data dari data.txt</h2>
 
   <div>
     <button onclick="ambilTXT()">Ambil dari data.txt</button>
@@ -26,41 +21,6 @@
   <button onclick="copyData()" id="copyBtn" style="display:none;">Copy</button>
 
   <script>
-    function processCSV() {
-      const fileInput = document.getElementById("csvFile");
-      const files = fileInput.files;
-      if (!files.length) {
-        alert("Pilih minimal satu file CSV!");
-        return;
-      }
-
-      let allResults = [];
-      let filesProcessed = 0;
-
-      Array.from(files).forEach(file => {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-          const text = e.target.result;
-          const rows = text.split(/\r?\n/).filter(r => r.trim() !== "");
-          if (rows.length > 1) {
-            for (let i = 1; i < rows.length; i++) { // skip header
-              const cols = rows[i].split(",");
-              if (cols.length > 15 && cols[15].trim() !== "") { 
-                let val = cols[15].trim();
-                val = val.replace(/^"|"$/g, ''); // hilangkan tanda petik
-                allResults.push(val);
-              }
-            }
-          }
-          filesProcessed++;
-          if (filesProcessed === files.length) {
-            tampilkanHasil(allResults);
-          }
-        };
-        reader.readAsText(file);
-      });
-    }
-
     function ambilTXT() {
       const url = "data.txt?t=" + new Date().getTime(); // bypass cache
       fetch(url, { cache: "no-store" })
