--- a/ambildata.html
+++ b/ambildata.html
@@ -86,7 +86,6 @@
         btn.disabled = true;
         setStatus('Mengambil data…');
 
-        // Tambah timestamp agar tidak ambil dari cache + minta no-store
         const url = 'data.txt?t=' + Date.now();
         const res = await fetch(url, { cache: 'no-store' });
 
@@ -94,16 +93,13 @@
 
         let text = await res.text();
 
-        // Hilangkan BOM kalau ada
         text = text.replace(/^\uFEFF/, '');
 
-        // Normalisasi line ending dan bersihkan baris kosong
         const rows = text
           .split(/\r?\n/)
           .map(r => r.trim())
           .filter(Boolean);
 
-        // Hilangkan tanda petik di awal/akhir tiap baris
         const result = rows.map(r => r.replace(/^"|"$/g, ''));
 
         tampilkanHasil(result);
@@ -114,8 +110,6 @@
           '. Pastikan file "data.txt" berada di folder yang sama, dan halaman ini diakses via http(s) (bukan file://).',
           true
         );
-        // Optional alert agar terlihat di mobile
-        // alert('Error: ' + err.message);
       } finally {
         btn.disabled = false;
       }
@@ -123,7 +117,8 @@
 
     function tampilkanHasil(result) {
       const out = document.getElementById('output');
-      out.value = result.join('\n');
+      // Gunakan \r\n agar hasil paste tetap satu baris-satu baris
+      out.value = result.join('\r\n');
       document.getElementById('copyBtn').style.display = result.length ? 'inline-block' : 'none';
     }
 
@@ -135,22 +130,16 @@
         return;
       }
       try {
-        // Metode modern (butuh context aman: https/localhost)
         if (navigator.clipboard && window.isSecureContext) {
-          await navigator.clipboard.writeText(text);
+          // Pastikan line break konsisten
+          await navigator.clipboard.writeText(text.replace(/\n/g, '\r\n'));
         } else {
-          // Fallback untuk http biasa / environment lama
           const readonly = out.hasAttribute('readonly');
           if (readonly) out.removeAttribute('readonly');
           out.focus();
           out.select();
-          out.setSelectionRange(0, text.length);
-          const ok = document.execCommand('copy');
+          document.execCommand('copy');
           if (readonly) out.setAttribute('readonly', '');
-          if (!ok) throw new Error('execCommand gagal');
-          // Hilangkan highlight
-          out.setSelectionRange(0, 0);
-          out.blur();
         }
         setStatus('Data berhasil disalin.');
         alert('Data berhasil dicopy!');
